feat: add notion service template

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ AZURE_FUNCTIONS_NAME=
 AZURE_FUNCTIONS_APP_NAME=
 AZURE_FUNCTIONS_RESOURCE_GROUP=
 AZURE_FUNCTIONS_SUBSCRIPTION=
+
+NOTION_KEY=
+NOTION_DATABASE_ID=
