feat: migrate to Azure OpenAI

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ BOT_INFO=
 TELEGRAM_WEBHOOK_URL=https://<subdomain>.workers.dev/
 ALLOWED_USER_IDS=
 
-OPENAI_API_KEY=
+# OPENAI_API_KEY=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_API_KEY=
 
 AZURE_TABLE_CONNECTION_STRING=
 
